--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -2,9 +2,8 @@ name: Daily Commit
 
 on:
   schedule:
-    - cron: '0 3 * * *' # Runs daily at 03:00 UTC
-
-  workflow_dispatch: # Allows manual triggering
+    - cron: '0 3 * * *'  # Runs daily at 03:00 UTC
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
   commit-job:
@@ -17,10 +16,10 @@ jobs:
       - name: Modify File
         run: echo "Last run: $(date)" >> log.txt
 
-      - name: Commit and Push Changes - 21f1005029@ds.study.iitm.ac.in
+      - name: Commit and Push Changes (21f1005029@ds.study.iitm.ac.in)
         run: |
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "21f1005029@ds.study.iitm.ac.in"
           git add log.txt
-          git commit -m "Automated commit: $(date)"
+          git commit -m "Automated commit: $(date)" || echo "No changes to commit"
           git push
