--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -2,24 +2,21 @@ name: Daily Commit
 
 on:
   schedule:
-    - cron: '0 3 * * *'  # Runs daily at 03:00 UTC
-  workflow_dispatch:  # Allows manual trigger
+    - cron: '30 2 * * *'  # Runs daily at 02:30 UTC
 
 jobs:
-  commit-job:
+  commit:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Modify File
-        run: echo "Last run: $(date)" >> log.txt
-
-      - name: Commit and Push Changes (21f1005029@ds.study.iitm.ac.in)
+      - name: Make a dummy commit # 21f1005029@ds.study.iitm.ac.in
         run: |
-          git config --global user.name "GitHub Actions Bot"
-          git config --global user.email "21f1005029@ds.study.iitm.ac.in"
-          git add log.txt
-          git commit -m "Automated commit: $(date)" || exit 0
+          date > date.txt
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add date.txt
+          git commit -m "Daily commit $(date)"
           git push
