--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -2,7 +2,7 @@ name: Daily Commit
 
 on:
   schedule:
-    - cron: '40 17 * * *'  # Runs daily at 00:30 UTC
+    - cron: '30 0 * * *'  # Runs daily at 00:30 UTC
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Git
+      - name: Configure Git for 21f1005029@ds.study.iitm.ac.in
         run: |
           git config --global user.name "GitHub Action"
           git config --global user.email "21f1005029@ds.study.iitm.ac.in"
